{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 282,
  "lineage": "ef345b2c-8a1c-17fa-64a1-15339f551ba8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00785f4835c6acf64",
            "arn": "arn:aws:ec2:eu-west-2:498142139943:instance/i-04fd5ed8dbaf609be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fd5ed8dbaf609be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OB1west2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0740396a32621a800",
            "private_dns": "ip-10-0-1-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "35.177.153.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d99bd576bd15d0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cdf1ef55eb911847"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7c2e5709e986a5c",
            "tags": {
              "Name": "OB1-ApacheServer-West2"
            },
            "tags_all": {
              "Name": "OB1-ApacheServer-West2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdf1ef55eb911847"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:security-group/sg-0cdf1ef55eb911847",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf1ef55eb911847",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "OB1-f5",
            "name_prefix": "",
            "owner_id": "498142139943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ob1-SecurityGroup1"
            },
            "tags_all": {
              "Name": "ob1-SecurityGroup1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021c129af667cb9d9",
            "domain": "vpc",
            "id": "eipalloc-021c129af667cb9d9",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-133-97-170.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.97.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:internet-gateway/igw-06851f99fadc79d32",
            "id": "igw-06851f99fadc79d32",
            "owner_id": "498142139943",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021c129af667cb9d9",
            "connectivity_type": "public",
            "id": "nat-09224708418297b91",
            "network_interface_id": "eni-06ffdab68b43ee266",
            "private_ip": "10.0.1.149",
            "public_ip": "18.133.97.170",
            "subnet_id": "subnet-0f7c2e5709e986a5c",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ad8e254a6307de321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09224708418297b91",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad8e254a6307de32",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06851f99fadc79d32",
            "id": "r-rtb-00c318c2cc1db0c011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c318c2cc1db0c01",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:route-table/rtb-0ad8e254a6307de32",
            "id": "rtb-0ad8e254a6307de32",
            "owner_id": "498142139943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:route-table/rtb-00c318c2cc1db0c01",
            "id": "rtb-00c318c2cc1db0c01",
            "owner_id": "498142139943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a90e1c60c598c6e8",
            "route_table_id": "rtb-0ad8e254a6307de32",
            "subnet_id": "subnet-078f3f8c0b991d825"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cda95727fe9ec3c3",
            "route_table_id": "rtb-00c318c2cc1db0c01",
            "subnet_id": "subnet-0f7c2e5709e986a5c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:subnet/subnet-078f3f8c0b991d825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078f3f8c0b991d825",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498142139943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:subnet/subnet-0f7c2e5709e986a5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c2e5709e986a5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498142139943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0372a776c25801eb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:498142139943:vpc/vpc-0372a776c25801eb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c305cd9fdfb48d69",
            "default_route_table_id": "rtb-05ee25bf8600b995d",
            "default_security_group_id": "sg-042b67aee61c5e7b9",
            "dhcp_options_id": "dopt-0cef18bf1cf252c5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0372a776c25801eb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ee25bf8600b995d",
            "owner_id": "498142139943",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}